--- a/src/index.scss
+++ b/src/index.scss
@@ -30,3 +30,69 @@ code {
     height: 100%;
   }
 }
+
+.main {
+  margin-top: 50px;
+}
+.item {
+  position: relative;
+  max-width: 500px;
+  
+  .control {
+    position: absolute;
+    left: 100%;
+    width: 500px;
+    margin-left: 15px;
+
+    button {
+      display: inline-block;
+
+    }
+  }
+  .control.in::before {
+    content: " ";
+    display: block;
+    position: absolute;
+    left: -15px;
+    height: 100%;
+    border-top: 15px rgba(0, 0,0, 0) solid;
+    border-bottom: 15px rgba(0, 0,0, 0) solid;
+    border-right: 15px red solid;
+  }
+  .control.out::before {
+    content: " ";
+    display: block;
+    position: absolute;
+    left: -15px;
+    height: 100%;
+    border-top: 15px rgba(0, 0,0, 0) solid;
+    border-bottom: 15px rgba(0, 0,0, 0) solid;
+    border-left: 15px red solid;
+  }
+  .control-1 {
+    top: -1em;
+  }
+
+  .control-2 {
+    top: 1.5em;
+  }
+
+  .content {
+    padding: 20px;
+    outline: 2px solid black;
+  }
+
+  .list {
+    width: 400px;
+    padding-left: 40px;
+    background: lightblue;
+
+    .list {
+      background: lightsalmon;
+
+      .list {
+        background: lightgreen;
+      }
+    }
+  }
+}
